FAQ overflow fixed.

--- a/public/css/index/index_faq.css
+++ b/public/css/index/index_faq.css
@@ -121,15 +121,12 @@
   font-size: 15px;
 }
 
-@media screen and (max-height: 750px) {
-  .faq-section {
-    height: auto;
-  }
-}
-
 @media screen and (max-width: 1330px) {
   .faq-section .lower .sub {
     width: 50%;
+    height: auto;
+  }
+  .faq-section {
     height: auto;
   }
 }
